--- a/css/styles.css
+++ b/css/styles.css
@@ -97,7 +97,6 @@ h1 {
 
 nav {
   grid-area: nv;
-  /* width: 100vw; */
   display: none;
   flex-direction: column;
   justify-content: center;
@@ -167,10 +166,11 @@ main {
   grid-area: mn;
 }
 
+
 .flex-container {
   display: flex;
   flex-direction: column;
-  height: 80vh;
+  min-height: 80vh;
   margin-bottom: 5px;
   border-top: 20px solid var(--dark-blue);
   padding: 40px 20px 20px 20px;
